Closed
Bug 333590
Opened 19 years ago
Closed 19 years ago
Input fields don't display texts longer than the fields themselves
Categories
(Core :: Layout: Form Controls, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: mozilla, Assigned: sharparrow1)
References
Details
(Keywords: regression)
Attachments
(1 file)
1.46 KB,
patch
|
dbaron
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
Any input field that is not multilined, has problems displaying contents longer than the fields themselves since the 0411 trunk. In the 0410 trunk it was working. This is the same behaviour on webpage input boxes and on the adress or search box.
To reproduce enter some text longer than the search box in it. The Text will be displayed, but as it becomes longer you don't see what you are typing anymore, but the text is being written.
Comment 1•19 years ago
|
||
I can reproduce this behavior on the latest trunk.
Reporter | ||
Updated•19 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•19 years ago
|
Keywords: regression
Comment 2•19 years ago
|
||
1. Focus search bar
2. Enter lots of text
3. Observe that when you reach the edge of the search bar, it is not scrolled, so you can't see what you're typing in anymore.
Works
- Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060410 Firefox/3.0a1 ID:2006041005
Broken
- Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060410 Firefox/3.0a1 ID:2006041102
Regression Range
- http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=PhoenixTinderbox&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-04-10+04&maxdate=2006-04-11+03&cvsroot=%2Fcvsroot
Severity: normal → major
Updated•19 years ago
|
Component: General → Layout: Form Controls
Product: Firefox → Core
QA Contact: general → layout.form-controls
Comment 3•19 years ago
|
||
I happen to have a 2006041012 build where this still works. Reduced regression range:
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-04-10+11%3A00&maxdate=1144749600&cvsroot=%2Fcvsroot
Comment 4•19 years ago
|
||
works in 20060410 1421pdt build
fails in 20060410 2021pdt build
http://bonsai.mozilla.org/cvsquery.cgi?treeid=default&module=all&branch=HEAD&branchtype=match&dir=&file=&filetype=match&who=&whotype=match&sortby=Date&hours=2&date=explicit&mindate=2006-04-10+13%3A40%3A00&maxdate=2006-04-10+20%3A21%3A00&cvsroot=%2Fcvsroot
Bug 332499 ?
Assignee | ||
Comment 5•19 years ago
|
||
My fault; the change to GetScrollbarStylesFromFrame is causing problems. The issue is that textboxes want to be scrollable, just without scrollbars. Fix coming up momentarily.
Assignee: nobody → sharparrow1
Depends on: 332927
![]() |
||
Updated•19 years ago
|
Assignee | ||
Comment 6•19 years ago
|
||
This should improve things; only force it to be unscrollable in print/print preview.
Attachment #218059 -
Flags: review?(roc)
Attachment #218059 -
Flags: superreview+
Attachment #218059 -
Flags: review?(roc)
Attachment #218059 -
Flags: review+
Comment 7•19 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20060411 Firefox/3.0a1 ID:2006041202
Now WFM
Reporter | ||
Comment 8•19 years ago
|
||
Also WFM in the latest tinderbox pacifica build. Bug marked as resolved-fixed
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060411 Firefox/3.0a1 ID:2006041202
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Comment 9•19 years ago
|
||
*** Bug 333711 has been marked as a duplicate of this bug. ***
Reporter | ||
Updated•19 years ago
|
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•