Bug 333590: fix input field scrolling. r+sr=dbaron